# tracy

./: .gitignore  .gitmodules  CMakeLists.txt  cmake-variants.json  vcpkg.json
.github/workflows/: build.yml  latex.yml
cmake/: option.cmake  target.cmake
cmd/: CMakeLists.txt
cmd/capture/: CMakeLists.txt
cmd/capture/src/: capture.cpp
cmd/csvexport/: CMakeLists.txt
cmd/csvexport/src/: csvexport.cpp
cmd/import-chrome/: CMakeLists.txt
cmd/import-chrome/src/: import-chrome.cpp
cmd/import-fuchsia/: CMakeLists.txt
cmd/import-fuchsia/src/: import-fuchsia.cpp
cmd/profiler/: CMakeLists.txt
cmd/profiler/src/: BackendGlfw.cpp  BackendWayland.cpp  Fonts.cpp
cmd/profiler/wasm/: httpd.py  index.html
cmd/update/: CMakeLists.txt
cmd/update/src/: OfflineSymbolResolver.cpp  update.cpp
examples/: fibers.cpp
public/: CMakeLists.txt
server/: CMakeLists.txt  TracyFileWrite.hpp  TracyFileselector.cpp  TracySourceView.cpp  TracyTexture.cpp  TracyView_Callstack.cpp  TracyWorker.cpp
test/: CMakeLists.txt  test.cpp
wasm/: toolchain.cmake
