add_subdirectory(capture)
add_subdirectory(csvexport)
add_subdirectory(import-chrome)
add_subdirectory(import-fuchsia)
add_subdirectory(profiler)
add_subdirectory(update)

add_custom_target(tracy_executables)
add_dependencies(tracy_executables import-chrome)
add_dependencies(tracy_executables import-fuchsia)
add_dependencies(tracy_executables capture)
add_dependencies(tracy_executables csvexport)
add_dependencies(tracy_executables profiler)
add_dependencies(tracy_executables update)